[package]
name = "envtunnel"
version = "0.1.0"
description = "EnvTunnel - Local Development Port Scanner with QR Codes"
authors = ["envtunnel"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "envtunnel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = ["tray-icon"] }
tauri-plugin-log = "2"
local-ip-address = "0.6"
tokio = { version = "1", features = ["net", "time", "rt"] }
tauri-plugin-autostart = "2.5.1"
reqwest = { version = "0.13.3", features = ["json"] }
